<resources>
    <string name="app_name">OneFootworld</string>
    <string name="action_shop">Shop</string>
    <string name="action_lineup">Lineup Creator</string>
    <string name="action_screen">Nearby Screening</string>
    <string name="action_score">Score</string>
    <string name="action_broadcast">Broadcast</string>
    <string name="product_details">Product Details</string>
    <string name="availability">See if it\'s availabile</string>
    <string name="past_events">Past Events</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="ip_add">http://192.168.0.105</string>
</resources>
