<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplication.Activities.MainActivity" >

    <item android:id="@+id/action_score"

        android:orderInCategory="100"
        android:title="@string/action_score"
        app:showAsAction="never" >
    <menu>

        <item android:id="@+id/livescore"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="Live Matches"/>

        <item android:id="@+id/Played"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="Played Matches"/>

        <item android:id="@+id/News"
            android:title="News"
            android:icon="@drawable/news"/>

    </menu>
    </item>

         <item android:id="@+id/action_broadcast"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:orderInCategory="100"
            android:title="@string/action_broadcast"
            app:showAsAction="never" />

        <item android:id="@+id/action_lineup"
            android:icon="@drawable/ic_person_pin_circle_black_24dp"
            android:orderInCategory="100"
            android:title="@string/action_lineup"
            app:showAsAction="never" />

        <item android:id="@+id/action_screen"
            android:icon="@drawable/ic_near_me_black_24dp"
            android:orderInCategory="100"
            android:title="@string/action_screen"
            app:showAsAction="never" />

        <item android:id="@+id/action_shop"
        android:icon="@drawable/ic_shopping_basket_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_shop"
        app:showAsAction="never" />
        <item android:id="@+id/action_logout"
            android:orderInCategory="100"
            android:title="Logout"
            android:icon="@drawable/logout"
            app:showAsAction="never" />



</menu>
